[package]
name = "socket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
rust_socketio = "0.4.0"
serde_json = "1.0"
system_shutdown = "4.0.0"
screenshots = "0.4.5"
reqwest = { version = "0.11.13", features = ["stream", "multipart", "json"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
anyhow = "1.0.66"
whoami = "1.2.3"